Adapt API add modelling
